force-app/main/default/objects/Lease__c/fields/Lease_duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_duration_Type__c</fullName>
    <label>Lease duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
            <value>
                <fullName>2 years</fullName>
            </value>
            <value>
                <fullName>3 years</fullName>
            </value>
            <value>
                <fullName>5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>