force-app/main/default/objects/Lease__c/fields/Lease_status__c.field-meta.xml
<CustomField>
    <fullName>Lease_status__c</fullName>
    <label>Lease status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>