force-app/main/default/objects/Lease__c/fields/Rent_Amount_After_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount_After_Discount__c</fullName>
    <formula>Rent_Amount__c -((( Discount__c)*Rent_Amount__c)/100) *100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rent Amount After Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>