force-app/main/default/objects/Lease__c/recordTypes/Long_Term_Lease_contract.recordType-meta.xml
<RecordType>
    <fullName>Long_Term_Lease_contract</fullName>
    <active>true</active>
    <label>Long Term Lease(contract)</label>
</RecordType>