force-app/main/default/objects/Lease__c/recordTypes/Short_Term_Lease_Month_to_Month.recordType-meta.xml
<RecordType>
    <fullName>Short_Term_Lease_Month_to_Month</fullName>
    <active>true</active>
    <label>Short Term Lease(Month to Month)</label>
</RecordType>